# typedruby

./: .dockerignore  .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Gemfile  Makefile  README.md  build.rs  build.sh  main.cc  tokens.def  typedruby.gemspec
.circleci/: Dockerfile  config.yml
cc/: lexer.rl
cc/grammars/: typedruby24.ypp
definitions/: core.rb  stdlib.rb
definitions/lib/: bigdecimal.rb  csv.rb  date.rb  delegate.rb  erb.rb  fileutils.rb  json.rb  openssl.rb  optparse.rb  ostruct.rb  pathname.rb  psych.rb  securerandom.rb  set.rb  shellwords.rb  stringio.rb  tempfile.rb  (+4 more)
docker/: Dockerfile
docs/: 00-getting-started.md  01-annotating-source-files.md  02-types.md
examples/: astprint.rs
gem/: typedruby.gemspec
inc/: optional.hpp
lib/: typedruby.rb
parser/: .gitignore  Cargo.toml  LICENSE  build.rs
release/: Dockerfile  build-darwin  build-linux
script/: bootstrap  build-linux  build-release  cibuild  generate-stdlib-definitions  mkbuilder  mkdiagnostics
src/: Literal.cc  Token.cc  TypedRuby24.y  abstract_type.rs  annotate.rs  ast.rs  builder.cc  builder.rs  capi.cc  client.rs  command.rs  config.rs  debug.rs  deferred_cell.rs  define.rs  diagnostics.csv  diagnostics.rs  driver.cc  environment.rs  errors.rs  ffi.rs  ffi_builder.rsinc  inflect.rs  lexer.h  lexer.rl  lexer.rs  lib.rs  literal.cc  load.rs  main.rs  node.cc  object.rs  or.rs  parser.cc  parser.rs  project.rs  protocol.rs  report.rs  server.rs  sexp.rs  (+6 more)
tests/: fixtures.rs  helpers.rs  reference.rs  whitequark.rs  whitequark_diags.rs
(+187 files in other folders)
