[package]
name = "typedruby"
version = "0.4.0"
authors = ["Hailey Somerville <hailey@hailey.lol>"]
license = "MIT"

[dependencies]
crossbeam = "0.3"
clap = "2.23"
glob = "0.2"
immutable-map = "0.1.2"
itertools = "0.6"
lazy_static = "0.2"
regex = "0.2"
ruby_parser = { path = "parser" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
termcolor = "0.3"
typed-arena = "1.2.0"
vec_map = "0.8"

[dev-dependencies]
difference = "1.0"
