[package]
name = "typedruby"
version = "0.4.0"
authors = ["Charlie Somerville <charlie@github.com>"]
license = "MIT"

[dependencies]
clap = "2.23"
crossbeam = "0.3"
glob = "0.2"
immutable-map = "0.1.2"
itertools = "0.6"
lazy_static = "0.2"
ref_slice = "1.1"
regex = "0.2"
ruby_parser = { path = "parser" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
termcolor = "0.3"
toml = "0.4"
typed-arena = "1.2.0"
vec_map = "0.8"

[dev-dependencies]
difference = "1.0"
